--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "npm run generate-data DBNetz-Betriebsstellenverzeichnis-Stand2018-04.csv gen/data.ts && tsc",
-    "generate-data": "ts-node --skip-project tool/generate-data.ts",
+    "generate-data": "ts-node tool/generate-data.ts",
     "test": "npm run build"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/fourplusone/ds100.git"
+    "type": "git",
+    "url": "https://github.com/fourplusone/ds100.git"
   },
   "files": [
     "dist"
