--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "DS100 as a Typescript Module",
   "main": "dist/main.js",
+  "types" : "dist/index.d.ts",
   "scripts": {
     "build": "npm run generate-data DBNetz-Betriebsstellenverzeichnis-Stand2018-04.csv gen/data.ts && tsc",
     "generate-data": "ts-node tool/generate-data.ts",
