--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dist"
   ],
   "author": "Matthias Bartelmess",
-  "license": "CC BY 4.0",
+  "license": "CC-BY-4.0",
   "dependencies": {},
   "devDependencies": {
     "@types/csv-parse": "^1.1.11",
